--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ts-node ./bin/www.ts",
     "dev": "nodemon ./bin/www.ts",
-    "populate": "ts-node ./populate.ts"
+    "populate": "ts-node ./populate.ts",
+    "lint": "prettier --write ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -29,6 +30,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
     "ts-node": "^10.9.2"
   }
 }
